--- a/styles/midgame.css
+++ b/styles/midgame.css
@@ -29,24 +29,77 @@
  
 }
 
+
+.backgroundTela1{
+    height: 34%;
+    width:70%;
+    background-image: url('../img/battleBg2.gif');
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items:flex-end;
+    justify-content: center;
+    border-radius: 100px 100px 0 0;
+    
+}
+
+.backgroundTela2{
+    height: 34%;
+    width:70%;
+    background-image: url('../img/battleBgKarsus.gif');
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items:flex-end;
+    justify-content: center;
+    border-radius: 100px 100px 0 0;
+    
+}
+
 .inicioTorneio{
-display: flex;
-flex-direction: column;
-align-items: center;
-background-image: url('../img/bgLuta.png');
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ background-image: url('../img/bgLuta.png');
  background-size:contain;
  box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.7);
- 
  background-repeat: no-repeat;
  align-items: center;
 
-
 }
+
+.inicioTorneio1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../img/bgLuta2.png');
+     background-size:contain;
+     box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.7);
+     background-repeat: no-repeat;
+     align-items: center;
+    
+ }
+
+ 
+.inicioTorneio2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../img/finalBg.png');
+     background-size:contain;
+     box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.7);
+     background-repeat: no-repeat;
+     align-items: center;
+    
+ }
 
 #enemyImg{
 
 margin: 0 auto;
-width: 30vw;
+width: 24vw;
+height: 29vw;
  bottom:0;
 }
 
